sass/_header.scss
header {
  display: flex;
  align-items: center;
  column-gap: 8vw;
  padding-block: 2.5em;
  .logo h1 {
    font-size: 1.8rem;
    font-weight: 600;
    position: relative;
    &:before {
      content: "";
      position: absolute;
      top: -50px;
      left: -50vw;
      width: calc(120px + 50vw);
      height: 150px;
      background-color: var(--secondary-color);
      border-radius: 0 0 var(--radius-val);
      z-index: -1;
    }
  }
  nav {
    display: flex;
    gap: 3em;
    text-anchor: unset;
    font-size: 0.85rem;
    a {
      position: relative;
      font-weight: 600;
      transition: all 0.25s ease-in-out;
      outline: transparent;
      cursor: pointer;
      &.active,
      &:hover {
        color: var(--primary-color);
        &::before {
          height: 20px;
          bottom: -30px;
          background-color: var(--primary-color);
        }
      }
      &::before {
        content: "";
        position: absolute;
        width: 1px;
        height: 15px;
        background-color: transparent;
        left: 50%;
        transform: translateX(-50%);
        bottom: -25px;
        border-radius: 30px;
        transition: all 0.25s ease-in-out;
      }
    }
  }
  .contact {
    margin-left: auto;
    display: flex;
    column-gap: 35px;
    font-size: 0.95rem;
    .phone {
      display: flex;
      align-items: center;
      gap: 10px;
      p:first-child {
        font-weight: 400;
        color: var(--tertiary-color);
      }
      label {
        color: var(--primary-color);
        cursor: pointer;
      }
      select {
        border: 0;
        outline: transparent;
        background-color: transparent;
        color: var(--quaternary-color);
        cursor: pointer;
        font-weight: 700;
      }
    }
  }
}

@media only screen and (max-width: 1024px) {
  header {
    nav {
      display: none;
    }
  }
}

@media only screen and (max-width: 768px) {
  header {
    padding-block: 2em;
    flex-wrap: wrap;
  }
}

@media only screen and (max-width: 425px) {
  body {
    font-size: calc(var(--font-size) * 0.8);
  }
  header {
    .logo h1 {
      font-size: 2.2rem;
    }
    .contact {
      flex-direction: column;
      row-gap: 0.5rem;
    }
  }
}

